[package]
name = "r-port-doctor"
version = "0.1.0"
edition = "2024"

[dependencies]
enable-ansi-support = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Time"
]}
colored = "2.1.0"